fix: Update projects section background color for improved visibility

--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,7 @@ body {
 /* Works */
 .projects {
   padding: 7rem 0;
-  /* background-color: var(--primary-bg-color); */
+  background-color: var(--white-color); 
 }
 
 .projects-title {
